--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -834,6 +834,28 @@ author = "Leslie Borjas De Xena"
   publisher={Routledge}
 }
 
+@article{jackson2000semi,
+  title={A semi-automated approach to online assessment},
+  author={Jackson, David},
+  journal={ACM SIGCSE Bulletin},
+  volume={32},
+  number={3},
+  pages={164--167},
+  year={2000},
+  publisher={ACM}
+}
+
+@article{vujovsevic2013software,
+  title={Software verification and graph similarity for automated evaluation of students’ assignments},
+  author={Vujo{\v{s}}evi{\'c}-Jani{\v{c}}i{\'c}, Milena and Nikoli{\'c}, Mladen and To{\v{s}}i{\'c}, Du{\v{s}}an and Kuncak, Viktor},
+  journal={Information and Software Technology},
+  volume={55},
+  number={6},
+  pages={1004--1016},
+  year={2013},
+  publisher={Elsevier}
+}
+
 % Fin listado de competencias
 
 @comment{jabref-meta: selector_publisher:}
