--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -390,9 +390,23 @@ El tipo de contribución está más distribuido. Las contribuciones del tipo pro
 
 \subsection{Esquema de clasificación}
 
-En los apartados siguientes, se presentan los resultados del estudio para cada área de investigación. El listado de trabajos se muestra en la tabla~\ref{tab:ListadoTrabajos}.
+%En los apartados siguientes, se presentan los resultados del estudio para cada área de investigación. El listado de trabajos se muestra en la tabla~\ref{tab:ListadoTrabajos}.
 
-\subsubsection{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
+Para definir  este esquema de clasificación se extrajeron características comunes de los articulos seleccionados. Todos los artículos recogidos tienen en común dos cosas: primero que evalúan competencias genéricas y segundo que la tecnología juega un papel en esta evaluación. Este papel puede ser para el desarrollo de las competencias, para la evaluación de las mismas o para ambos. Para esta tesis el aspecto que nos interesa es la evaluación, aunque hay trabajos en la que no se pueden separar el cómo se han trabajado las competencias de su evaluación. El listado de trabajos se muestra en la tabla~\ref{tab:ListadoTrabajos}.
+
+Desde el punto de vista de la evaluación hay dos tipos de trabajos:
+\begin{itemize}
+\item Evaluación semiautomática: se utiliza una herramienta informática que da formato y sporte a la evaluación pero es el humano el que introduce las calificaciones. 
+\item Evaluación automática:  se utiliza una herramienta informática que evalúa de manera automática a los estudiantes. Puede ser que esta herramienta requiera una intervención inicial del profesor para introducir datos o configurar la propia herramienta, pero las evaluaciones se calculan automáticamente.
+\end{itemize}
+
+\subsubsection{Evaluación semiautomática de competencias genéricas}
+
+En este grupo se engloban trabajos en los que la función de la herramienta informática para la evaluación de una o varias competencias genéricas de los estudiantes es la de dar soporte a la misma proporcionando el formato para introducir datos (notas, indicadores, respuestas a preguntas, ... etc.). Pero necesitan que alguien introduzca los datos. Ese alguien pueden ser los alumnos (autoevaluació o evaluación entre iguales) o los profesores. En ocasiones hay aproximaciones mixtas.
+
+% SEGUIR CON DESCRIPCIONES:
+
+% 1 \subsubsection{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
 
 La autoevaluación es un proceso en el que los estudiantes evalúan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para ahorrar tiempo del profesorado, y por otro, para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas. A menudo este tipo de evaluación se acompaña de algún tipo de rúbrica \cite{malehorn1994ten}.
 
@@ -402,7 +416,7 @@ Se han encontrado muchos trabajos en la literatura que utilizan este enfoque par
 \textbf{Competencias evaluadas}
 \bigskip
 
-El \emph{trabajo en equipo} es la competencia más evaluada mediante este proceso de evaluación, ya que encontramos varios trabajos en los que después de realizar un trabajo en equipo los estudiante se evalúan unos a otros (evaluación entre iguales)~\cite{ficapal2015learning,barbera2011assessment,khamis2012measurement}. También adquieren protagonismo competencias relacionadas con el trabajo en equipos, como son la \emph{comunicación} y la \emph{responsabilidad}. El espíritu empresarial (\emph{emprendimiento}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo de procesos de evaluación. En la tabla~\ref{tab:CompetenciasAuto} se puede ver el listado de trabajos para cada competencia.
+El \emph{trabajo en equipo} es la competencia más evaluada mediante este proceso de evaluación, ya que encontramos varios trabajos en los que después de realizar un trabajo en equipo los estudiante se evalúan unos a otros (evaluación entre iguales). También adquieren protagonismo otras competencias relacionadas con el trabajo en equipos, como son la \emph{comunicación} y la \emph{responsabilidad}. El espíritu empresarial (\emph{emprendimiento}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo de procesos de evaluación. En la tabla~\ref{tab:CompetenciasAuto} se puede ver el listado de trabajos para cada competencia.
 
 % starcic2008sustaining: Pregunta a profesores por todas las competencias mediante cuestionario sobre lo bueno de utilizar e-portfolio
 % so2011mapping: solo se ha leído el abstract y no se especifican
@@ -420,7 +434,7 @@ El \emph{trabajo en equipo} es la competencia más evaluada mediante este proces
     \hline
     Creatividad & \cite{piedra2010measuring} \\
     \hline
-    Emprendimiento & \cite{DeXena2012educacion,chang2009international,marquez2010have,achcaoucaou2014competence} \\
+    Emprendimiento & \cite{chang2009international,marquez2010have,achcaoucaou2014competence} \\
     \hline
     Pensamiento crítico & \cite{arno2011promoting,pinto2011assessment} \\
     \hline
@@ -430,7 +444,7 @@ El \emph{trabajo en equipo} es la competencia más evaluada mediante este proces
     \hline 
     Segundo idioma & \cite{renau2010teaching,masip2013self,sevilla2012assessment} \\
     \hline
-    TIC & \cite{lasa2013problem} \\
+    TIC & \cite{lasa2013problem,masip2013self} \\
     \hline
     Trabajo autónomo &  \cite{lasa2013problem} \\
     \hline
@@ -446,14 +460,14 @@ El \emph{trabajo en equipo} es la competencia más evaluada mediante este proces
 \textbf{Estrategias}
 \bigskip
 
-Los trabajos seleccionados en esta parte siguen todos una estrategia muy parecida. Se utilizan una o varias herramientas y después se realizan cuestionarios de autoevaluación o evaluación entre compañeros. También podemos encontrar algún trabajo en el que el cuestionario también se pasa antes de aplicar la herramienta. A continuación se describen las diferentes estrategias encontradas, con los elementos que en ella aparecen y en la tabla~\ref{tab:MetodosAuto} se muestran los trabajos asociados a cada una:
+En este grupo de trabajos se realizan experiencias utilizando algún tipo de herramienta que favorezca el desarrollo y desempeño de la competencia que se pretende evaluar. Después de la experiencia los alumnos realizan cuestionarios de autoevaluación o evaluación entre compañeros. A continuación se describen las diferentes estrategias encontradas, con los elementos que en ella aparecen y en la tabla~\ref{tab:MetodosAuto} se muestran los trabajos asociados a cada una:
 
 \begin{itemize}
 \item \emph{Metodología ABP}: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante rúbricas de autoevaluación y evaluación entre iguales.
 \item \emph{Practicas con herramientas empresariales}: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.
 \item \emph{Trabajo en E-Portfolio}: un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica
 \item \emph{Cuestionarios de nivel}: cuestionarios que miden el nivel de los estudiantes en el desempeño competencias genéricas previamente al inicio de una actividad o un curso.
-\item \emph{Trabajo en equipo en plataforma online}: tras haber trabajado los estudiantes en equipos en un entorno de aprendizaje virtual se realizan cuestionarios de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas.
+\item \emph{Interacción con EVA}: tras haber trabajado los estudiantes en actividades de un EVA se realizan cuestionarios de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas.
 \end{itemize}
 
 
@@ -472,7 +486,7 @@ Los trabajos seleccionados en esta parte siguen todos una estrategia muy parecid
     \hline
     Cuestionarios de nivel & Autoevaluación &  \cite{sevilla2012assessment,so2011mapping} \\
     \hline
-    Trabajo en equipo en plataforma online & Autoevaluación y evaluación entre iguales &  \cite{ficapal2015learning,khamis2012measurement,barbera2011assessment,ruizacarate2013soft,piedra2010measuring,pinto2011assessment,carreras2013promotion} \\
+    Interacción con EVA & Autoevaluación y evaluación entre iguales &  \cite{ficapal2015learning,khamis2012measurement,barbera2011assessment,ruizacarate2013soft,piedra2010measuring,pinto2011assessment,carreras2013promotion} \\
     \hline
   \end{tabular}
 \end{center}
@@ -493,7 +507,7 @@ Los trabajos seleccionados en esta parte siguen todos una estrategia muy parecid
 
 Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. En algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación~\cite{lasa2013problem,sevilla2012assessment,khamis2012measurement,barbera2011assessment,pinto2011assessment}. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas específicas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
 
-\subsubsection{Evaluación del profesor (teacher assessment)}
+% 2 \subsubsection{Evaluación del profesor (teacher assessment)}
 
 En muchos casos la evaluación de competencias genéricas se realiza mediante un seguimiento continuo del trabajo del estudiante por parte del profesor. Este proceso es lo que se conoce como \emph{evaluación continua}. Esto permite ir introduciendo mejoras constantes en el proceso de aprendizaje, siendo éste el motivo por el que la evaluación continua se adopta como una estrategia de evaluación formativa más orientada al proceso de aprendizaje que a una valoración puntual. Actualmente, los expertos, influenciados por la \emph{Declaración de Bolonia}, consideran más apropiado desarrollar este tipo de sistemas de evaluación~\cite{garcia2005competencias}. 
 
@@ -504,7 +518,7 @@ En muchos casos la evaluación de competencias genéricas se realiza mediante un
 \textbf{Competencias evaluadas}
 \bigskip
 
-Las competencias genéricas más evaluadas por este método son las de \emph{comunicación} y la de \emph{trabajo en equipo}. En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
+Las competencia genérica más evaluada mediante la evaluación del profesor es la \emph{comunicación} oral y escrita. En estos trabajos los profesores evalúan a los estudiantes mediante la corrección de documentos escritos y presentaciones orales. También destaca un número considerable de trabajos que evalúan la competencia de \emph{trabajo en equipo}. En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
 
 \begin{table}
   \begin{center}
@@ -513,7 +527,7 @@ Las competencias genéricas más evaluadas por este método son las de \emph{com
     COMPETENCIA & TRABAJOS\\
     \hline
     \hline
-    Comunicación & \cite{martin2010new,prashar2010competence,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,yang2014fine,lacuesta2009active,casan2015developing} \\
+    Comunicación & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,yang2014fine,lacuesta2009active} \\
 	\hline
 	Emprendimiento & \cite{ward2011developing} \\
 	\hline
@@ -523,7 +537,7 @@ Las competencias genéricas más evaluadas por este método son las de \emph{com
 	\hline
 	Resolución de problemas & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\    
     \hline
-    Trabajo en equipo & \cite{martin2010new,prashar2010competence,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,lacuesta2009active} \\    
+    Trabajo en equipo & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,lacuesta2009active} \\    
     \hline
   \end{tabular}
 \end{center}
@@ -536,7 +550,13 @@ Las competencias genéricas más evaluadas por este método son las de \emph{com
 \textbf{Estrategias}
 \bigskip
 
-En este trabajo nos encontramos con dos estrategias básicas: por un lado estrategias basadas en la evaluación continua, en la que los profesores recogen evidencias del trabajo de los estudiantes en entornos virtuales durante el curso con las que rellenan rúbricas, hojas de cálculo o la herramienta de evaluación que utilicen. Por otro lado, tenemos estrategias basadas en evaluaciones finales, donde los profesores lo que evaluan es un resultado final del trabajo del alumno. En la tabla~\ref{tab:MetodosProfesor} puede ver los métodos que sigue cada uno de los trabajos que se han recopilado para este tipo de evaluación.
+En estos trabajos son los profesores los que evalúan manualmente el desempeño de sus estudiantes en las competencias genéricas. En algunos trabajos lo hacen siguiendo una evaluación continua recogiendo evidencias del trabajo de los estudiantes en entornos virtuales durante el curso con las que rellenan rúbricas, hojas de cálculo o la herramienta de evaluación que utilicen. Por otro lado, tenemos trabajos basados en evaluaciones finales, donde los profesores lo que evaluan es un resultado final del trabajo del alumno. 
+
+Además de las estrategias vistas en el punto anterior se incorpora aquí el modelo matemático para \emph{itinerario de aprendizaje}. En~\cite{yang2014fine} se define un modelo de itinerario de aprendizaje que soporta la evaluación de algunos conocimientos y competencias para describir el progreso de aprendizaje del estudiante. En el modelo se definen las fases, actividades, evaluaciones y ponderaciones. Se define matemáticamente para poder formalmente definir las evaluaciones y para poder reutilizar las fórmulas. 
+
+En la tabla~\ref{tab:MetodosProfesor} puede ver los métodos que sigue cada uno de los trabajos que se han recopilado para este tipo de evaluación.
+
+
 
 \begin{table}
   \begin{center}
@@ -547,15 +567,14 @@ En este trabajo nos encontramos con dos estrategias básicas: por un lado estrat
     \hline
     Metodología ABP & Profesor &  \cite{lacuesta2009active} \\
     \hline
-    Indicadores para evaluación continua & Profesor &  \cite{martin2010new,prashar2010competence} \\
+    Practicas con herramientas empresariales & Profesor &  \cite{ward2011developing} \\
     \hline
     Trabajo en e-portfolio & Estudiantes y Profesor &  \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\
     \hline
     Modelo matemático evaluado por etapas & Profesor &  \cite{yang2014fine} \\
-    \hline
-    Módulos Moodle competencias empresariales & Profesor &  \cite{ward2011developing} \\
-    \hline
-    Rúbricas & Profesor &  \cite{casan2015developing} \\
+    \hline   
+% QUITAR LOS 3 de abajo 
+    Rúbricas & Profesor &  \cite{casan2015developing,martin2010new,prashar2010competence} \\
     \hline
   \end{tabular}
 \end{center}
@@ -572,6 +591,7 @@ Uno de los problemas de la no automatización de los procesos de evaluación es 
 
 Siguiendo con los problemas de escalabilidad nos encontramos con el trabajo mostrado en~\cite{lacuesta2009active}. En él se utiliza una metodología ABP, en la que se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera también que el esfuerzo necesario y carga de trabajo para cada profesor es un poco mayor al habitual. 
 
+\subsubsection{Evaluación automática de competencias genéricas}
 \subsubsection{Cuestionarios (Questionnaries)}
 
 Algunos de los cuestionarios que se han encontrado dentro de la bibliografía son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. 
@@ -595,7 +615,7 @@ Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es co
     \hline
     Creatividad & \cite{albergaria2011critical} \\	  
     \hline
-    Gestión de proyectos & \cite{martinez2014teamwork,barbera2011design} \\	  
+    Gestión de proyectos & \cite{martinez2014teamwork} \\	  
     \hline
     Habilidades interpersonales & \cite{martinez2014teamwork,badcock2010developing} \\	  
     \hline
@@ -650,7 +670,6 @@ En esta sección se muestran diferentes herramientas que consisten en cuestionar
 \label{tab:MetodosCuestionarios}
 \end{table}
 
-Simple test idioma: \cite{fernandez2011experience}
 Modelos matemáticos \emph{Rasch model} y \emph{ESPEGS model}: su entrada es las evaluaciones tomadas por el profesor: \cite{aziz2007appraisal,rashid2008engineering,a2007outcome}
 
 \bigskip
@@ -679,11 +698,11 @@ El término \emph{Learning Analytics}, traducido al español como análisis del 
 \textbf{Competencias evaluadas}
 \bigskip
 
-% VOY POR AQUI: párrafo introductorio a la tabla y luego tengo que poner el cuadro de estrategias/herramientas
+En el trabajo presentado \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo y evaluación de las competencias de \emph{emprendimiento} y \emph{resolución de problemas}. En~\cite{rayon2014web} se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. Y en \cite{fidalgo:2015} abordan la evaluación de la competencia de \emph{trabajo en equipo} (tabla~\ref{tab:CompetenciasAutomaticas}).
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| m{3.5cm} | m{9cm} |}
+  \begin{tabular}{| m{3.5cm} | l |}
     \hline
     COMPETENCIA & TRABAJOS\\
     \hline
@@ -704,6 +723,26 @@ El término \emph{Learning Analytics}, traducido al español como análisis del 
 \label{tab:CompetenciasAutomaticas}
 \end{table} 
 
+\bigskip
+\textbf{Estrategias}
+\bigskip
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
+    \hline
+    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    \hline
+    \hline
+    Juegos serios & - &  \cite{guenaga2013serious,bedek2011behavioral} \\
+    \hline
+    Learning Analytics & - &  \cite{fidalgo:2015,rayon2014web} \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Estrategias de automatización}
+\label{tab:EstrategiasAutomaticas}
+\end{table}
 
 En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de las competencias de \emph{emprendimiento} y \emph{solución de problemas}. Se definieron una serie de indicadores como medida del desempeño en las competencias que permiten al estudiante conocer su nivel de adquisición de las mismas. En \cite{bedek2011behavioral} también se utilizan los juegos serios para el desarrollo y evaluación de competencias genéricas. Se basa en un modelo donde para cada competencia se identifican subcompetencias más específicas, lo que facilita el proceso de definición de indicadores.
 
@@ -783,7 +822,7 @@ En~\cite{rayon2014web} se propone la evaluación de varias competencias genéric
     \hline
     \cite{chang2009international} & International creative tension study of university students in South Korea and Finland & evaluation research & tool & Peer and self-assessment \\
     \hline
-    \cite{} & Making Explicit and Reinforcing Horizontal Competences in an Electronic Engineering Degree & validation research & process & Teacher assessment \\
+    \cite{portilla2014making} & Making Explicit and Reinforcing Horizontal Competences in an Electronic Engineering Degree & validation research & process & Teacher assessment \\
     \hline
     \cite{so2011mapping} & Mapping The Impact On Holistic Development: A Study Of The Relationship & proposal of solution & process & Questionnarie \\
     \hline
