--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -856,6 +856,16 @@ author = "Leslie Borjas De Xena"
   publisher={Elsevier}
 }
 
+@article{portilla2014making,
+  title={Making Explicit and Reinforcing Horizontal Competences in an Electronic Engineering Degree},
+  author={Portilla, Joaqu{\'\i}n and Varona, Amparo and Otegi, Nerea},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={141},
+  pages={961--968},
+  year={2014},
+  publisher={Elsevier}
+}
+
 % Fin listado de competencias
 
 @comment{jabref-meta: selector_publisher:}
